# RayTracer

./: .gitignore  CMakeLists.txt  Esfera.c  Esfera.h  cilindro.c  cilindro.h  disco.c  disco.h  elipse.c  elipse.h  escena.txt  estructuras.c  estructuras.h  input.c  input.h  makefile  out.tga  plano.c  plano.h  poligono.c  poligono.h  rayTrace  rayTrace.c  rayTrace.h
